# hi-cloud

./: .gitignore  README.md
aws/ec2/: ebs-clone-fs.sh  ebs-volume-copy-prepare.sh
aws/hello/: CMakeLists.txt  Makefile  hello.cpp
aws/hello-logging/: CMakeLists.txt  Makefile  hellologging.cpp
aws/hello-polly/: CMakeLists.txt  Makefile  hellopolly.cpp
aws/hi-cdk/: cdk.json  githubhook.json  package-lock.json  package.json  s3-notification-configuration.json
aws/hi-cdk/lib/: dummy-lambda-function-with-logging.js  dummy-lambda-function.js  hi-cdk-stack.ts  ls-s3-lambda-function.js
